--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
 
         <script src="scripts/vendor/angular-ui-tree.js"></script>
 
-        <!--<script type="text/javascript" src="dist/app.js"></script>-->
+        <script type="text/javascript" src="dist/app.js"></script>
 
-        <script src="app/app.js"></script>
+        <!--<script src="app/app.js"></script>
 
         <script src="app/controllers.js"></script>
 
         <script src="app/services.js"></script>
 
-        <script src="app/directives.js"></script>
+        <script src="app/directives.js"></script>-->
 
         <script src="scripts/extras.js"></script>
 
